--- a/src/style/style.css
+++ b/src/style/style.css
@@ -60,4 +60,100 @@ main section{
 
 .main-text img{
     width: 15rem;
+    margin-bottom: 3vh;
+}
+
+.main-text h3{
+    font-size: 3.5rem;
+    margin-bottom: 2rem;
+}
+.main-text p{
+    margin-bottom: 1.5rem;
+}
+
+.main-text h6{
+    color: #999;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+
+}
+
+.main-text .btn{
+    padding: 10px 25px;
+    background: #0071e3;
+    color:#fff;
+    border-radius: 20px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: all 0.5s;
+}
+.main-text .btn:hover{
+    opacity: .70;
+}
+
+.main-text .text h5{
+    font-size: 1rem;
+    color: #444;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.main-text .content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.main-text .content span{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 1px 1px #888;
+    transition: all 0.5s;
+}
+
+.main-text .content span:hover{
+    opacity: .80;
+}
+
+
+#green{
+    background: #384837;
+}
+#pink{
+    background: #f8ddd6;
+}
+#blue{
+    background:#225f7e;
+}
+#black{
+    background: #192028;
+}
+#white{
+    background: #f7f2ee;
+}
+#red{
+    background: #ae0617;
+}
+
+
+.main-img{
+    transition: all 1s ease;
+    z-index: 100;
+}
+.main-img img{
+    width: 500px;
+    transform: rotate(-7deg);
+}
+
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #445c42;
+    clip-path: circle(800px at right 1000px) ;
+
 }
