--- a/src/style/style.css
+++ b/src/style/style.css
@@ -5,14 +5,17 @@
     list-style: none;
     text-decoration: none;
     font-family: sans-serif;
+    color: #316697c5;
 
 }
 body{
-    background: #e8e6e7;
+    background: #c5e4f0af;
 }
 header{
-    padding: 20px 70px;
     background: #070606;
+    padding: 10px 15px;
+    width: 100%; 
+    position: relative;
 }
 
 .navegation{
@@ -52,13 +55,16 @@ header{
 main section{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-evenly;
+    gap: 32px;
     padding: 5rem 10rem;
+
 }
 
 .main-text img{
     width: 15rem;
     margin-bottom: 3vh;
+   
 }
 
 .main-text h3{
@@ -88,7 +94,7 @@ main section{
     background: #0071e3;
     color:#fff;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
     transition: all 0.5s;
     margin-left: 15px;
@@ -123,10 +129,12 @@ main section{
     opacity: .80;
 }
 .box{
+
     width:100vh;
     height: 400px;
     max-width: 500px;
     border-radius: 20px;
+    background: #fff;
     box-shadow: 2px 10px 23px #070606;
 }
 
@@ -166,23 +174,12 @@ main section{
     z-index: 100;
 }
 .main-img img{
-    width: 500px;
+    width: 350px;
     transform: rotate(-7deg);
     animation: floatIphone 6s ease-in infinite;
     
 }
 
-.circle{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #445c42;
-    clip-path: circle(800px at right 1000px) ;
-    animation: floatIphone 4s ease-in-out infinite;
-
-}
 
 
 @keyframes floatIphone {
